Fix logo on mobile

--- a/themes/lecture2go-theme/docroot/_diffs/css/l2go_view768.css
+++ b/themes/lecture2go-theme/docroot/_diffs/css/l2go_view768.css
@@ -224,8 +224,7 @@
 	.aui .site-title .l2go-logo {
 	    position: absolute;
 	    right: 21px;
-	    top: -23px;
-	    width: 71px !important;
+	    /*width: 71px !important;*/
 	}	
 	/* Bastian Ende */
 	
